Latest build of target web.

--- a/knowl/p-25.html
+++ b/knowl/p-25.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Another type of theorem that we are sometimes called upon to prove is a <dfn class="terminology">uniqueness theorem</dfn>. In such a case, we must prove that the thing in question exists as well as prove that there is only one such thing. The next activity walks you through the structure of such an argument.</p>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p>(Note that it would be completely reasonable to do something like let <span class="process-math">\(m=2kn+k+n\)</span> if you wanted to make the form of an odd integer clearer, but I think this proof would be fine as written.)</p>
 <span class="incontext"><a href="sec_proof_practice.html#p-25" class="internal">in-context</a></span>
 </body>
 </html>
