--- a/knowl/p-26.html
+++ b/knowl/p-26.html
@@ -12,8 +12,7 @@
 </head>
 <body class="ignore-math">
 <h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>We want to prove the theorem “If <span class="process-math">\(c,a,r\in\mathbb{R}\)</span> such that <span class="process-math">\(c\neq 0\)</span> and <span class="process-math">\(r\neq a/c\text{,}\)</span> then there exists a unique <span class="process-math">\(x\in\mathbb{R}\)</span> such that <span class="process-math">\((ax+1)/(cx) =
-r\text{.}\)</span>”</p>
+<p>Prove the theorem “For every integer <span class="process-math">\(x\text{,}\)</span> <span class="process-math">\(x+4\)</span> is odd if and only if <span class="process-math">\(x+7\)</span> is even.” (Recall that this requires proving two separate implications. Identify them before writing your proofs!)</p>
 <span class="incontext"><a href="sec_proof_practice.html#p-26" class="internal">in-context</a></span>
 </body>
 </html>
