--- a/knowl/p-28.html
+++ b/knowl/p-28.html
@@ -11,10 +11,9 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h6 class="heading"><span class="type">Paragraph</span></h6>
-<p>Next, we have to show that our <span class="process-math">\(x\)</span> is unique. To do so, you assume that <span class="process-math">\(x_1,x_2\in\mathbb{R}\)</span> both have the property required. Namely, that  <span class="process-math">\((ax_1+1)/(cx_1) =
-r\)</span> and <span class="process-math">\((ax_1+1)/(cx_2) =
-r\text{.}\)</span> Now you use algebra to show that <span class="process-math">\(x_1=x_2\text{,}\)</span> which means that the <span class="process-math">\(x\)</span> you came up with originally really is unique.</p>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p><span class="process-math">\((\Leftarrow)\)</span> Let <span class="process-math">\(x+7\)</span> be an even integer. This means that there is an integer such that <span class="process-math">\(x+7=2m\text{.}\)</span> Subtracting <span class="process-math">\(3\)</span> from both sides gives <span class="process-math">\(x+4=2m-3\text{.}\)</span> A bit more algebra shows that <span class="process-math">\(x+4 = 2m-4+1 =
+2(m-2)+1\text{.}\)</span> Thus, we have proved that <span class="process-math">\(x+4\)</span> is an odd integer.</p>
 <span class="incontext"><a href="sec_proof_practice.html#p-28" class="internal">in-context</a></span>
 </body>
 </html>
