--- a/knowl/p-32.html
+++ b/knowl/p-32.html
@@ -12,7 +12,9 @@
 </head>
 <body class="ignore-math">
 <h6 class="heading"><span class="type">Paragraph</span></h6>
-<p>If <span class="process-math">\(n\)</span> and <span class="process-math">\(m\)</span> are even, then <span class="process-math">\(nm\)</span> is even. (What do you notice about your proof?)</p>
+<p>Next, we have to show that our <span class="process-math">\(x\)</span> is unique. To do so, you assume that <span class="process-math">\(x_1,x_2\in\mathbb{R}\)</span> both have the property required. Namely, that  <span class="process-math">\((ax_1+1)/(cx_1) =
+r\)</span> and <span class="process-math">\((ax_1+1)/(cx_2) =
+r\text{.}\)</span> Now you use algebra to show that <span class="process-math">\(x_1=x_2\text{,}\)</span> which means that the <span class="process-math">\(x\)</span> you came up with originally really is unique.</p>
 <span class="incontext"><a href="sec_proof_practice.html#p-32" class="internal">in-context</a></span>
 </body>
 </html>
