--- a/knowl/p-33.html
+++ b/knowl/p-33.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h6 class="heading"><span class="type">Paragraph</span></h6>
-<p>Prove or disprove: If <span class="process-math">\(n\)</span> is odd, then there exists an integer <span class="process-math">\(m\)</span> such that <span class="process-math">\(n^2=8m+1\text{.}\)</span> (If you decide the statement is true and prove it, can you prove that <span class="process-math">\(m\)</span> is unique?)</p>
+<p>What you have above likely has a lot of scratchwork in it. Rewrite things neatly to have a nice paragraph that proves the theorem.</p>
 <span class="incontext"><a href="sec_proof_practice.html#p-33" class="internal">in-context</a></span>
 </body>
 </html>
