--- a/knowl/p-35.html
+++ b/knowl/p-35.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Our first discussion of linear algebra will cover the ideas of efficiently solving a system of linear equations and matrix operations.</p>
-<span class="incontext"><a href="sec_solving_linear_systems.html#p-35" class="internal">in-context</a></span>
+<h6 class="heading"><span class="type">Paragraph</span></h6>
+<p>If <span class="process-math">\(n\)</span> is even, then <span class="process-math">\(n^2\)</span> is even.</p>
+<span class="incontext"><a href="sec_proof_practice.html#p-35" class="internal">in-context</a></span>
 </body>
 </html>
