--- a/knowl/p-45.html
+++ b/knowl/p-45.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h6 class="heading"><span class="type">Paragraph</span></h6>
-<p>Multiply the second equation in our system by negative three and state the <em class="emphasis">new</em> system of equations.</p>
+<p><span class="process-math">\(E_1: x^2-2x+1=0\)</span> and <span class="process-math">\(E_2: x-1=0\)</span></p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-45" class="internal">in-context</a></span>
 </body>
 </html>
