--- a/knowl/p-46.html
+++ b/knowl/p-46.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h6 class="heading"><span class="type">Paragraph</span></h6>
-<p>Write a few sentences about why the new system of equations given in the previous part is equivalent to the original system.</p>
+<p><span class="process-math">\(E_1: e^x=1\)</span> and <span class="process-math">\(E_2: x^3+x^2+x=0\)</span></p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-46" class="internal">in-context</a></span>
 </body>
 </html>
