--- a/knowl/p-61.html
+++ b/knowl/p-61.html
@@ -11,8 +11,9 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>Consider the various systems that have appeared earlier in this section when answering the following questions. That means each question will have several answers. Clearly indicate which earlier system each belongs to.</p>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>In order to distinguish <dfn class="terminology">vectors</dfn> (as being more than just <span class="process-math">\(n\)</span> by <span class="process-math">\(1\)</span> matrices), we will use the arrow notation and lower case symbols like <span class="process-math">\(\vec{u}\)</span> and <span class="process-math">\(\vec{v}\)</span> to denote vectors. Unless otherwise stated, we will use column vectors. For instance, if <span class="process-math">\(\vec{v} =\begin{bmatrix}v_1\\
+v_2\\\vdots\\ v_m\end{bmatrix}\text{,}\)</span> then the second <dfn class="terminology">component</dfn> of <span class="process-math">\(\vec{v}\)</span> is the scalar <span class="process-math">\(v_2\text{.}\)</span> The size of a vector in <span class="process-math">\(\mathbb{R}^n\)</span> is the number of components the vector has. In Chapter 2, we will deal with a <em class="emphasis">much</em> more general notion of vectors that will <em class="emphasis">not</em> have components like vectors in <span class="process-math">\(\mathbb{R}^n\text{.}\)</span></p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-61" class="internal">in-context</a></span>
 </body>
 </html>
