--- a/knowl/p-62.html
+++ b/knowl/p-62.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h6 class="heading"><span class="type">Paragraph</span></h6>
-<p>What is the coefficient matrix for the previous systems?</p>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>The <dfn class="terminology">coefficient matrix</dfn> of a linear system of <span class="process-math">\(m\)</span> equations in <span class="process-math">\(n\)</span> variables is a <span class="process-math">\(m\)</span> by <span class="process-math">\(n\)</span> matrix whose <span class="process-math">\((i,j)\)</span> entry is the coefficient of the <span class="process-math">\(j\)</span>-th variable, <span class="process-math">\(x_j\text{,}\)</span> in the <span class="process-math">\(i\)</span>-th equation of the system. The <dfn class="terminology">augmented matrix</dfn> of a linear system of <span class="process-math">\(m\)</span> equations in <span class="process-math">\(n\)</span> variables is a <span class="process-math">\(m\)</span> by <span class="process-math">\((n+1)\)</span> matrix whose first <span class="process-math">\(n\)</span> columns are the coefficient matrix of the system and the last column is the constant terms from the right side of each equation.</p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-62" class="internal">in-context</a></span>
 </body>
 </html>
