--- a/knowl/p-65.html
+++ b/knowl/p-65.html
@@ -12,12 +12,7 @@
 </head>
 <body class="ignore-math">
 <h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>A rectangular matrix is in <dfn class="terminology">row echelon form</dfn> if it has the following three properties:</p>
-<ul class="disc">
-<li><p>All nonzero rows are above any rows of all zeros.</p></li>
-<li><p>Each <dfn class="terminology">leading entry</dfn> (being the first non-zero entry) of a row is in a column to the right of the leading entry of the row above it.</p></li>
-<li><p>All entries in a column below a leading entry are zeros.</p></li>
-</ul>
+<p>Consider the various systems that have appeared earlier in this section when answering the following questions. That means each question will have several answers. Clearly indicate which earlier system each belongs to.</p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-65" class="internal">in-context</a></span>
 </body>
 </html>
