--- a/knowl/p-69.html
+++ b/knowl/p-69.html
@@ -11,8 +11,13 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>It is important to note that the row echelon form of a matrix is <em class="emphasis">not</em> unique.</p>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p>A rectangular matrix is in <dfn class="terminology">row echelon form</dfn> if it has the following three properties:</p>
+<ul class="disc">
+<li><p>All nonzero rows are above any rows of all zeros.</p></li>
+<li><p>Each <dfn class="terminology">leading entry</dfn> (being the first non-zero entry) of a row is in a column to the right of the leading entry of the row above it.</p></li>
+<li><p>All entries in a column below a leading entry are zeros.</p></li>
+</ul>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-69" class="internal">in-context</a></span>
 </body>
 </html>
