--- a/knowl/p-73.html
+++ b/knowl/p-73.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h6 class="heading"><span class="type">Paragraph</span></h6>
-<p><span class="process-math">\(M\)</span> satisfies the second and third properties of row echelon form but does not satisfy the first.</p>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>It is important to note that the row echelon form of a matrix is <em class="emphasis">not</em> unique.</p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-73" class="internal">in-context</a></span>
 </body>
 </html>
