--- a/knowl/p-79.html
+++ b/knowl/p-79.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>Solve each of the following systems by converting to an augmented matrix and using elementary row operations to reduce the augmented matrix to reduced row echelon form. With each reduced row echelon form, put a box around all pivot entries. Use the system of equations corresponding to the reduced row echelon form to write out the solution set for each system.</p>
+<h6 class="heading"><span class="type">Paragraph</span></h6>
+<p><span class="process-math">\(M\)</span> satisfies the properties of row echelon form and the first property of reduced row echelon form but does not satisfy the second property of reduced row echelon form.</p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-79" class="internal">in-context</a></span>
 </body>
 </html>
