--- a/knowl/solution-1-hidden.html
+++ b/knowl/solution-1-hidden.html
@@ -10,8 +10,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="robots" content="noindex, nofollow">
 </head>
-<body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
+<body class="ignore-math"><div class="solution solution-like">
 <p>Let <span class="process-math">\(x\)</span> and <span class="process-math">\(y\)</span>be odd integers. Hence there exist integers <span class="process-math">\(k\)</span> and <span class="process-math">\(n\)</span> such that <span class="process-math">\(x=2k+1\)</span> and <span class="process-math">\(y=2n+1\text{.}\)</span> Multiplying, we have</p>
 <div class="displaymath process-math" data-contains-math-knowls="">
 \begin{equation*}
@@ -19,6 +18,6 @@ xy=(2k+1)(2n+1) = 4kn+2k+2n+1 = 2(2kn+k+n)+1\text{.}
 \end{equation*}
 </div>
 <p class="continuation">Since <span class="process-math">\(k\)</span> and <span class="process-math">\(n\)</span> are integers, we know that <span class="process-math">\(2kn+k+n\)</span> is an integer. Thus, we see that <span class="process-math">\(xy\)</span> is an odd integer.</p>
-<span class="incontext"><a href="sec_proof_practice.html#p-24" class="internal">in-context</a></span>
-</body>
+<p>(Note that it would be completely reasonable to do something like let <span class="process-math">\(m=2kn+k+n\)</span> if you wanted to make the form of an odd integer clearer, but I think this proof would be fine as written.)</p>
+</div></body>
 </html>
