--- a/knowl/solution-1.html
+++ b/knowl/solution-1.html
@@ -11,7 +11,10 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
+<div class="solution solution-like">
+<h4 class="heading">
+<span class="type">Solution</span><span class="space"> </span><span class="codenumber">1.1.1</span><span class="period">.</span>
+</h4>
 <p>Let <span class="process-math">\(x\)</span> and <span class="process-math">\(y\)</span>be odd integers. Hence there exist integers <span class="process-math">\(k\)</span> and <span class="process-math">\(n\)</span> such that <span class="process-math">\(x=2k+1\)</span> and <span class="process-math">\(y=2n+1\text{.}\)</span> Multiplying, we have</p>
 <div class="displaymath process-math" data-contains-math-knowls="">
 \begin{equation*}
@@ -19,6 +22,8 @@ xy=(2k+1)(2n+1) = 4kn+2k+2n+1 = 2(2kn+k+n)+1\text{.}
 \end{equation*}
 </div>
 <p class="continuation">Since <span class="process-math">\(k\)</span> and <span class="process-math">\(n\)</span> are integers, we know that <span class="process-math">\(2kn+k+n\)</span> is an integer. Thus, we see that <span class="process-math">\(xy\)</span> is an odd integer.</p>
-<span class="incontext"><a href="sec_proof_practice.html#p-24" class="internal">in-context</a></span>
+<p>(Note that it would be completely reasonable to do something like let <span class="process-math">\(m=2kn+k+n\)</span> if you wanted to make the form of an odd integer clearer, but I think this proof would be fine as written.)</p>
+</div>
+<span class="incontext"><a href="sec_proof_practice.html#solution-1" class="internal">in-context</a></span>
 </body>
 </html>
