--- a/knowl/solution-2-hidden.html
+++ b/knowl/solution-2-hidden.html
@@ -10,11 +10,11 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="robots" content="noindex, nofollow">
 </head>
-<body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
+<body class="ignore-math"><div class="solution solution-like">
 <p><span class="process-math">\((\Rightarrow)\)</span> Let <span class="process-math">\(x+4\)</span> be an odd integer. Hence there exists an integer <span class="process-math">\(n\)</span> such that <span class="process-math">\(x+4=2n+1\text{.}\)</span> By adding three to both sides of this equation, we have <span class="process-math">\(x+7 =
 2n+4\text{.}\)</span> Factoring the right-hand side gives <span class="process-math">\(x+7 =
 2(n+2)\text{.}\)</span> Hence, since <span class="process-math">\(x+7\)</span> is twice an integer, we have proved that <span class="process-math">\(x+7\)</span> is even.</p>
-<span class="incontext"><a href="sec_proof_practice.html#p-27" class="internal">in-context</a></span>
-</body>
+<p><span class="process-math">\((\Leftarrow)\)</span> Let <span class="process-math">\(x+7\)</span> be an even integer. This means that there is an integer such that <span class="process-math">\(x+7=2m\text{.}\)</span> Subtracting <span class="process-math">\(3\)</span> from both sides gives <span class="process-math">\(x+4=2m-3\text{.}\)</span> A bit more algebra shows that <span class="process-math">\(x+4 = 2m-4+1 =
+2(m-2)+1\text{.}\)</span> Thus, we have proved that <span class="process-math">\(x+4\)</span> is an odd integer.</p>
+</div></body>
 </html>
