--- a/knowl/activity-4.html
+++ b/knowl/activity-4.html
@@ -13,6 +13,7 @@
 <body class="ignore-math">
 <article class="activity project-like"><h4 class="heading">
 <span class="type">Activity</span><span class="space"> </span><span class="codenumber">1.1</span><span class="period">.</span>
-</h4>Prove the theorem “If <span class="process-math">\(x\)</span> is an odd integer and <span class="process-math">\(y\)</span> is an odd integer, then <span class="process-math">\(xy\)</span> is an odd integer.”<div class="workspace" data-space="10cm"></div></article><span class="incontext"><a href="sec_proof_practice.html#activity-4" class="internal">in-context</a></span>
+</h4>Prove the theorem “If <span class="process-math">\(x\)</span> is an odd integer and <span class="process-math">\(y\)</span> is an odd integer, then <span class="process-math">\(xy\)</span> is an odd integer.”<div class="solutions"><a href="" class="solution-knowl original" data-knowl="./knowl/solution-1-hidden.html" title="Solution 1.1.1"><span class="type">Solution</span><span class="period">.</span></a></div>
+<div class="workspace" data-space="10cm"></div></article><span class="incontext"><a href="sec_proof_practice.html#activity-4" class="internal">in-context</a></span>
 </body>
 </html>
