--- a/knowl/activity-5.html
+++ b/knowl/activity-5.html
@@ -15,6 +15,7 @@
 <span class="type">Activity</span><span class="space"> </span><span class="codenumber">1.2</span><span class="period">.</span>
 </h4>
 <p>Prove the theorem “For every integer <span class="process-math">\(x\text{,}\)</span> <span class="process-math">\(x+4\)</span> is odd if and only if <span class="process-math">\(x+7\)</span> is even.” (Recall that this requires proving two separate implications. Identify them before writing your proofs!)</p>
+<div class="solutions"><a href="" class="solution-knowl original" data-knowl="./knowl/solution-2-hidden.html" title="Solution 1.2.1"><span class="type">Solution</span><span class="period">.</span></a></div>
 <div class="workspace" data-space="12cm"></div></article><span class="incontext"><a href="sec_proof_practice.html#activity-5" class="internal">in-context</a></span>
 </body>
 </html>
