--- a/knowl/p-29.html
+++ b/knowl/p-29.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h6 class="heading"><span class="type">Paragraph</span></h6>
-<p>What you have above likely has a lot of scratchwork in it. Rewrite things neatly to have a nice paragraph that proves the theorem.</p>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>Another type of theorem that we are sometimes called upon to prove is a <dfn class="terminology">uniqueness theorem</dfn>. In such a case, we must prove that the thing in question exists as well as prove that there is only one such thing. The next activity walks you through the structure of such an argument.</p>
 <span class="incontext"><a href="sec_proof_practice.html#p-29" class="internal">in-context</a></span>
 </body>
 </html>
