--- a/knowl/p-30.html
+++ b/knowl/p-30.html
@@ -12,7 +12,8 @@
 </head>
 <body class="ignore-math">
 <h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>Pick and choose amongst the following for more practice.</p>
+<p>We want to prove the theorem “If <span class="process-math">\(c,a,r\in\mathbb{R}\)</span> such that <span class="process-math">\(c\neq 0\)</span> and <span class="process-math">\(r\neq a/c\text{,}\)</span> then there exists a unique <span class="process-math">\(x\in\mathbb{R}\)</span> such that <span class="process-math">\((ax+1)/(cx) =
+r\text{.}\)</span>”</p>
 <span class="incontext"><a href="sec_proof_practice.html#p-30" class="internal">in-context</a></span>
 </body>
 </html>
