--- a/knowl/p-34.html
+++ b/knowl/p-34.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h6 class="heading"><span class="type">Paragraph</span></h6>
-<p>For every integer <span class="process-math">\(n\text{,}\)</span> if <span class="process-math">\(n^2\)</span> is an odd integer, then <span class="process-math">\(n\)</span> is an odd integer.</p>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p>Pick and choose amongst the following for more practice.</p>
 <span class="incontext"><a href="sec_proof_practice.html#p-34" class="internal">in-context</a></span>
 </body>
 </html>
