--- a/knowl/p-37.html
+++ b/knowl/p-37.html
@@ -11,17 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>Is <span class="process-math">\((1,2,3)\)</span> a solution to the following system?</p>
-<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{equation*}
-\begin{array}{rcrcrcrcr}
-1 x_1  \amp +\amp  2 x_2 \amp +\amp  3 x_3 \amp =\amp  14 \\ % -1  3
-2 x_1  \amp -\amp  3 x_2 \amp +\amp  2 x_3 \amp =\amp  0 \\
-x_1   \amp  \amp        \amp +\amp  7 x_3 \amp =\amp  0
-\end{array}
-\end{equation*}
-</div>
-<span class="incontext"><a href="sec_solving_linear_systems.html#p-37" class="internal">in-context</a></span>
+<h6 class="heading"><span class="type">Paragraph</span></h6>
+<p>Prove or disprove: If <span class="process-math">\(n\)</span> is odd, then there exists an integer <span class="process-math">\(m\)</span> such that <span class="process-math">\(n^2=8m+1\text{.}\)</span> (If you decide the statement is true and prove it, can you prove that <span class="process-math">\(m\)</span> is unique?)</p>
+<span class="incontext"><a href="sec_proof_practice.html#p-37" class="internal">in-context</a></span>
 </body>
 </html>
