--- a/knowl/p-38.html
+++ b/knowl/p-38.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>The previous problem shows how easy it is to check if a set of variable values is a solution. However, <em class="emphasis">finding</em> a solution or the set of all solutions is harder but very important to many problems. Generally speaking, the process of finding the solution set for a system of equations is to trade the system of equations you have for an <dfn class="terminology">equivalent</dfn> system (a system with the same solution set).</p>
-<span class="incontext"><a href="sec_solving_linear_systems.html#p-38" class="internal">in-context</a></span>
+<h6 class="heading"><span class="type">Paragraph</span></h6>
+<p>For every integer <span class="process-math">\(n\text{,}\)</span> if <span class="process-math">\(n^2\)</span> is an odd integer, then <span class="process-math">\(n\)</span> is an odd integer.</p>
+<span class="incontext"><a href="sec_proof_practice.html#p-38" class="internal">in-context</a></span>
 </body>
 </html>
