--- a/knowl/p-39.html
+++ b/knowl/p-39.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>For each pair of equations given, state whether <span class="process-math">\(E_1\)</span> is equivalent to <span class="process-math">\(E_2\text{.}\)</span></p>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>Our first discussion of linear algebra will cover the ideas of efficiently solving a system of linear equations and matrix operations.</p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-39" class="internal">in-context</a></span>
 </body>
 </html>
