--- a/knowl/p-41.html
+++ b/knowl/p-41.html
@@ -11,8 +11,17 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h6 class="heading"><span class="type">Paragraph</span></h6>
-<p><span class="process-math">\(E_1: x^2-2x+1=0\)</span> and <span class="process-math">\(E_2: x-1=0\)</span></p>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p>Is <span class="process-math">\((1,2,3)\)</span> a solution to the following system?</p>
+<div class="displaymath process-math" data-contains-math-knowls="">
+\begin{equation*}
+\begin{array}{rcrcrcrcr}
+1 x_1  \amp +\amp  2 x_2 \amp +\amp  3 x_3 \amp =\amp  14 \\ % -1  3
+2 x_1  \amp -\amp  3 x_2 \amp +\amp  2 x_3 \amp =\amp  0 \\
+x_1   \amp  \amp        \amp +\amp  7 x_3 \amp =\amp  0
+\end{array}
+\end{equation*}
+</div>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-41" class="internal">in-context</a></span>
 </body>
 </html>
