--- a/knowl/p-43.html
+++ b/knowl/p-43.html
@@ -11,13 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>Hopefully it will be easier to explicitly write the solution set of the new equivalent system. An <dfn class="terminology">elementary operation</dfn> on a system of equations is an operation of the form:</p>
-<ol class="decimal">
-<li><p>multiplying an equation by a non-zero scalar</p></li>
-<li><p>switching two equations</p></li>
-<li><p>adding a multiple of one equation to another equation</p></li>
-</ol>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p>For each pair of equations given, state whether <span class="process-math">\(E_1\)</span> is equivalent to <span class="process-math">\(E_2\text{.}\)</span></p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-43" class="internal">in-context</a></span>
 </body>
 </html>
