--- a/knowl/p-44.html
+++ b/knowl/p-44.html
@@ -11,14 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>For this question, we will consider the following system of linear equations:</p>
-<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{align*}
-a_1 x_1+a_2x_2+a_3x_3\amp =a_4\\
-b_1 x_1+b_2x_2+b_3x_3\amp =b_4
-\end{align*}
-</div>
+<h6 class="heading"><span class="type">Paragraph</span></h6>
+<p><span class="process-math">\(E_1: x^2-1=0\)</span> and <span class="process-math">\(E_2: x-1=0\)</span></p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-44" class="internal">in-context</a></span>
 </body>
 </html>
