--- a/knowl/p-47.html
+++ b/knowl/p-47.html
@@ -11,8 +11,13 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h6 class="heading"><span class="type">Paragraph</span></h6>
-<p>Write a few sentences about why switching the order in which equations are presented in a system does not change the set of solutions.</p>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>Hopefully it will be easier to explicitly write the solution set of the new equivalent system. An <dfn class="terminology">elementary operation</dfn> on a system of equations is an operation of the form:</p>
+<ol class="decimal">
+<li><p>multiplying an equation by a non-zero scalar</p></li>
+<li><p>switching two equations</p></li>
+<li><p>adding a multiple of one equation to another equation</p></li>
+</ol>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-47" class="internal">in-context</a></span>
 </body>
 </html>
