--- a/knowl/p-48.html
+++ b/knowl/p-48.html
@@ -11,8 +11,14 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h6 class="heading"><span class="type">Paragraph</span></h6>
-<p>Write out the equation obtained by multiplying the second equation in the original system by a non-zero scalar (which we will call <span class="process-math">\(k\)</span>) and adding to the first equation.</p>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p>For this question, we will consider the following system of linear equations:</p>
+<div class="displaymath process-math" data-contains-math-knowls="">
+\begin{align*}
+a_1 x_1+a_2x_2+a_3x_3\amp =a_4\\
+b_1 x_1+b_2x_2+b_3x_3\amp =b_4
+\end{align*}
+</div>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-48" class="internal">in-context</a></span>
 </body>
 </html>
