--- a/knowl/p-50.html
+++ b/knowl/p-50.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>Solve the following systems just using elementary operations. Remember to show your work.</p>
+<h6 class="heading"><span class="type">Paragraph</span></h6>
+<p>Write a few sentences about why the new system of equations given in the previous part is equivalent to the original system.</p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-50" class="internal">in-context</a></span>
 </body>
 </html>
