--- a/knowl/p-51.html
+++ b/knowl/p-51.html
@@ -12,13 +12,7 @@
 </head>
 <body class="ignore-math">
 <h6 class="heading"><span class="type">Paragraph</span></h6>
-<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{align*}
-2y+z\amp =4\\
-x-3y+2z\amp =5\\
-2x+y \amp =-2
-\end{align*}
-</div>
+<p>Write a few sentences about why switching the order in which equations are presented in a system does not change the set of solutions.</p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-51" class="internal">in-context</a></span>
 </body>
 </html>
