--- a/knowl/p-52.html
+++ b/knowl/p-52.html
@@ -12,13 +12,7 @@
 </head>
 <body class="ignore-math">
 <h6 class="heading"><span class="type">Paragraph</span></h6>
-<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{align*}
-3x-2y-z\amp =0\\
-2x+y+z\amp =10\\
-x+4y+3z\amp =20
-\end{align*}
-</div>
+<p>Write out the equation obtained by multiplying the second equation in the original system by a non-zero scalar (which we will call <span class="process-math">\(k\)</span>) and adding to the first equation.</p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-52" class="internal">in-context</a></span>
 </body>
 </html>
