--- a/knowl/p-53.html
+++ b/knowl/p-53.html
@@ -12,13 +12,14 @@
 </head>
 <body class="ignore-math">
 <h6 class="heading"><span class="type">Paragraph</span></h6>
+<p>Replace the second equation in the original system with your answer to the previous part, which we will call System 2. Prove that System 2 is equivalent to the original system. In other words, you need to show that <span class="process-math">\((c_1,c_2,c_3)\)</span> is a solution of the equations <span class="process-math">\(S_1\text{:}\)</span></p>
 <div class="displaymath process-math" data-contains-math-knowls="">
 \begin{align*}
-3x-2y-z\amp =0\\
-2x+y+z\amp =10\\
-x+4y+3z\amp=10
+a_1 x_1+a_2x_2+a_3x_3\amp =a_4\\
+b_1 x_1+b_2x_2+b_3x_3\amp =b_4
 \end{align*}
 </div>
+<p class="continuation"><em class="emphasis">if and only if</em> <span class="process-math">\((c_1,c_2,c_3)\)</span> is a solution to System 2.</p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-53" class="internal">in-context</a></span>
 </body>
 </html>
