--- a/knowl/p-54.html
+++ b/knowl/p-54.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>A system of equations is <dfn class="terminology">consistent</dfn> if there exists at least one solution to the system. In other words, a consistent system of equations has a nonempty solution set. A system that is not consistent is said to be <dfn class="terminology">inconsistent</dfn>.</p>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p>Solve the following systems just using elementary operations. Remember to show your work.</p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-54" class="internal">in-context</a></span>
 </body>
 </html>
