--- a/knowl/p-56.html
+++ b/knowl/p-56.html
@@ -11,15 +11,14 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>In order to specify what <dfn class="terminology">entry</dfn> we are referring to in a matrix, we need an ordered pair of indices telling us the number of the row and number of the column to look in respectively. For instance, if</p>
+<h6 class="heading"><span class="type">Paragraph</span></h6>
 <div class="displaymath process-math" data-contains-math-knowls="">
-\begin{equation*}
-B=\begin{bmatrix} 1\amp 5\amp 0\\\heartsuit\amp
-\bigstar \amp \blacklozenge \\ £\amp \circledR\amp \maltese \end{bmatrix}\text{,}
-\end{equation*}
+\begin{align*}
+3x-2y-z\amp =0\\
+2x+y+z\amp =10\\
+x+4y+3z\amp =20
+\end{align*}
 </div>
-<p class="continuation">then the <span class="process-math">\((3,2)\)</span> entry of <span class="process-math">\(B\)</span> is in the third row and 2nd column. You could also write this as <span class="process-math">\(B_{3,2}= \circledR\text{.}\)</span> The <dfn class="terminology"><span class="process-math">\(i\)</span>-th row</dfn> of a matrix <span class="process-math">\(A\)</span> will be denoted <span class="process-math">\(row_i(A)\)</span> and the <dfn class="terminology"><span class="process-math">\(j\)</span>-th column</dfn> will be denoted <span class="process-math">\(column_j(A)\text{.}\)</span></p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-56" class="internal">in-context</a></span>
 </body>
 </html>
