--- a/knowl/p-58.html
+++ b/knowl/p-58.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>The <dfn class="terminology">coefficient matrix</dfn> of a linear system of <span class="process-math">\(m\)</span> equations in <span class="process-math">\(n\)</span> variables is a <span class="process-math">\(m\)</span> by <span class="process-math">\(n\)</span> matrix whose <span class="process-math">\((i,j)\)</span> entry is the coefficient of the <span class="process-math">\(j\)</span>-th variable, <span class="process-math">\(x_j\text{,}\)</span> in the <span class="process-math">\(i\)</span>-th equation of the system. The <dfn class="terminology">augmented matrix</dfn> of a linear system of <span class="process-math">\(m\)</span> equations in <span class="process-math">\(n\)</span> variables is a <span class="process-math">\(m\)</span> by <span class="process-math">\((n+1)\)</span> matrix whose first <span class="process-math">\(n\)</span> columns are the coefficient matrix of the system and the last column is the constant terms from the right side of each equation.</p>
+<p>A system of equations is <dfn class="terminology">consistent</dfn> if there exists at least one solution to the system. In other words, a consistent system of equations has a nonempty solution set. A system that is not consistent is said to be <dfn class="terminology">inconsistent</dfn>.</p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-58" class="internal">in-context</a></span>
 </body>
 </html>
