--- a/knowl/p-63.html
+++ b/knowl/p-63.html
@@ -11,8 +11,36 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h6 class="heading"><span class="type">Paragraph</span></h6>
-<p>What is the augmented matrix for the previous systems?</p>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>The system</p>
+<div class="displaymath process-math" data-contains-math-knowls="">
+\begin{equation*}
+\begin{array}{rcrcrcrcr}
+a_{11} x_1  \amp +\amp  a_{12} x_2 \amp +\amp  ... \amp +\amp   a_{1n}x_n \amp =\amp  b_1 \\ % -1  3
+a_{21} x_1  \amp +\amp  a_{22} x_2 \amp +\amp  ... \amp +\amp   a_{2n}x_n \amp =\amp  b_2 \\
+\vdots  \amp  \amp  \vdots \amp  \amp   \amp  \amp   \vdots \amp \amp  \vdots \\
+a_{m1} x_1  \amp +\amp  a_{m2} x_2 \amp +\amp  ... \amp +\amp   a_{mn}x_n \amp =\amp  b_m
+\end{array}
+\end{equation*}
+</div>
+<p class="continuation">has a coefficient matrix</p>
+<div class="displaymath process-math" data-contains-math-knowls="">
+\begin{equation*}
+A=\begin{bmatrix} a_{11} \amp  a_{12} \amp  ... \amp   a_{1n} \\
+a_{21}\amp  a_{22}\amp  ... \amp   a_{2n} \\
+\vdots  \amp  \vdots \amp    \amp   \vdots   \\
+a_{m1}\amp  a_{m2} \amp  ... \amp   a_{mn}  \end{bmatrix}
+\end{equation*}
+</div>
+<p class="continuation">and an augmented matrix of</p>
+<div class="displaymath process-math" data-contains-math-knowls="">
+\begin{equation*}
+[A|b]=\begin{bmatrix} a_{11} \amp  a_{12} \amp  ... \amp   a_{1n} \amp |\amp b_1\\
+a_{21}\amp  a_{22}\amp  ... \amp   a_{2n} \amp |\amp b_2\\
+\vdots  \amp  \vdots \amp    \amp   \vdots \amp |\amp  \vdots  \\
+a_{m1}\amp  a_{m2} \amp  ... \amp   a_{mn} \amp |\amp b_m \end{bmatrix}
+\end{equation*}
+</div>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-63" class="internal">in-context</a></span>
 </body>
 </html>
