--- a/knowl/p-64.html
+++ b/knowl/p-64.html
@@ -12,13 +12,7 @@
 </head>
 <body class="ignore-math">
 <h4 class="heading"><span class="type">Paragraph</span></h4>
-<p>The elementary operations on equations outlined above will correspond to elementary row operations on matrices as well. Specifically, an <dfn class="terminology">elementary row operation</dfn> on a matrix is an operation of the form:</p>
-<ul class="disc">
-<li><p>multiplying a row by a non-zero scalar</p></li>
-<li><p>switching two rows</p></li>
-<li><p>adding a multiple of one row to another row</p></li>
-</ul>
-<p class="continuation">We now have operations to trade our system of equations for an equivalent system, but we have not stated a way to make sure that the solution set will be easy to explicitly state from our new equivalent system. The following matrix forms will be useful for determining solution sets and various other properties of the corresponding system of equations.</p>
+<p>For some properties of the system of equations, we need only look at the coefficient matrix but others will need the augmented matrix. It is important to know the difference and be able to state which corresponding matrix you are using in your work.</p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-64" class="internal">in-context</a></span>
 </body>
 </html>
