--- a/knowl/p-68.html
+++ b/knowl/p-68.html
@@ -11,8 +11,14 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>The reduced row echelon form of a rectangular matrix is unique.</p>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>The elementary operations on equations outlined above will correspond to elementary row operations on matrices as well. Specifically, an <dfn class="terminology">elementary row operation</dfn> on a matrix is an operation of the form:</p>
+<ul class="disc">
+<li><p>multiplying a row by a non-zero scalar</p></li>
+<li><p>switching two rows</p></li>
+<li><p>adding a multiple of one row to another row</p></li>
+</ul>
+<p class="continuation">We now have operations to trade our system of equations for an equivalent system, but we have not stated a way to make sure that the solution set will be easy to explicitly state from our new equivalent system. The following matrix forms will be useful for determining solution sets and various other properties of the corresponding system of equations.</p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-68" class="internal">in-context</a></span>
 </body>
 </html>
