--- a/knowl/p-70.html
+++ b/knowl/p-70.html
@@ -12,7 +12,11 @@
 </head>
 <body class="ignore-math">
 <h5 class="heading"><span class="type">Paragraph</span></h5>
-<p>Give an example of a matrix <span class="process-math">\(M\)</span> that has the following properties. If such a matrix cannot exist, explain why.</p>
+<p>If a matrix in row echelon form satisfies the following additional properties, then we say the matrix is in <dfn class="terminology">reduced row echelon form</dfn>:</p>
+<ul class="disc">
+<li><p>The leading entry in each nonzero row is 1.</p></li>
+<li><p>Each leading 1 is the only nonzero entry in its column.</p></li>
+</ul>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-70" class="internal">in-context</a></span>
 </body>
 </html>
