--- a/knowl/p-71.html
+++ b/knowl/p-71.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h6 class="heading"><span class="type">Paragraph</span></h6>
-<p><span class="process-math">\(M\)</span> satisfies the first two properties of row echelon form but does not satisfy the third.</p>
+<h4 class="heading"><span class="type">Paragraph</span></h4>
+<p>The leading entry in a nonzero row of the row echelon form is called a <dfn class="terminology">pivot</dfn>. The column in which a pivot occurs is called a <dfn class="terminology">pivot column</dfn> and the corresponding variable is a <dfn class="terminology">basic variable</dfn> or <dfn class="terminology">pivot variable</dfn>. A variable corresponding to a column in which the coefficient matrix does <em class="emphasis">not</em> have a pivot are called <dfn class="terminology">free variables</dfn>. While the echelon form is needed to find where pivots will occur, we will sometimes refer to pivot positions of a matrix even when the matrix is not in echelon form.</p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-71" class="internal">in-context</a></span>
 </body>
 </html>
