--- a/knowl/p-72.html
+++ b/knowl/p-72.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h6 class="heading"><span class="type">Paragraph</span></h6>
-<p><span class="process-math">\(M\)</span> satisfies the first and third properties of row echelon form but does not satisfy the second.</p>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p>The reduced row echelon form of a rectangular matrix is unique.</p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-72" class="internal">in-context</a></span>
 </body>
 </html>
