--- a/knowl/p-74.html
+++ b/knowl/p-74.html
@@ -11,8 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h6 class="heading"><span class="type">Paragraph</span></h6>
-<p><span class="process-math">\(M\)</span> satisfies the three properties of row echelon form but does not satisfy the first property of reduced row echelon form.</p>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p>Give an example of a matrix <span class="process-math">\(M\)</span> that has the following properties. If such a matrix cannot exist, explain why.</p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-74" class="internal">in-context</a></span>
 </body>
 </html>
