--- a/knowl/p-75.html
+++ b/knowl/p-75.html
@@ -12,7 +12,7 @@
 </head>
 <body class="ignore-math">
 <h6 class="heading"><span class="type">Paragraph</span></h6>
-<p><span class="process-math">\(M\)</span> satisfies the properties of row echelon form and the first property of reduced row echelon form but does not satisfy the second property of reduced row echelon form.</p>
+<p><span class="process-math">\(M\)</span> satisfies the first two properties of row echelon form but does not satisfy the third.</p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-75" class="internal">in-context</a></span>
 </body>
 </html>
