--- a/knowl/p-80.html
+++ b/knowl/p-80.html
@@ -11,14 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h6 class="heading"><span class="type">Paragraph</span></h6>
-<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{align*}
-3x_1-2x_2\amp =6\\
-2x_1-2x_2\amp =-2\\
--x_1+x_2\amp =1
-\end{align*}
-</div>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p>List out all possible row echelon forms of 3 by 4 matrices using the symbols <span class="process-math">\(\blacksquare\)</span> for a pivot, <span class="process-math">\(*\)</span> for a non-pivot entry (possibly <span class="process-math">\(0\)</span>), and <span class="process-math">\(0\)</span> (when an entry <em class="emphasis">must</em> be <span class="process-math">\(0\)</span>). For each of these, list out which variables are pivot variables and which are free variables.</p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-80" class="internal">in-context</a></span>
 </body>
 </html>
