--- a/knowl/p-81.html
+++ b/knowl/p-81.html
@@ -11,14 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h6 class="heading"><span class="type">Paragraph</span></h6>
-<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{align*}
-3x_1-2x_2\amp =6\\
-2x_1-2x_2\amp=6\\
--x_1+x_2\amp =1
-\end{align*}
-</div>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p>There are 15 possible.</p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-81" class="internal">in-context</a></span>
 </body>
 </html>
