--- a/knowl/p-82.html
+++ b/knowl/p-82.html
@@ -11,13 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h6 class="heading"><span class="type">Paragraph</span></h6>
-<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{align*}
-4x-y+3z\amp =5\\
-3x-y+2z\amp =7
-\end{align*}
-</div>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p>List out all possible reduced row echelon forms of 3 by 4 matrices using the symbols <span class="process-math">\(\blacksquare\)</span> for a pivot, <span class="process-math">\(*\)</span> for a non-pivot entry (possibly <span class="process-math">\(0\)</span>), and <span class="process-math">\(0\)</span> (when an entry <em class="emphasis">must</em> be <span class="process-math">\(0\)</span>). What value must the <span class="process-math">\(\blacksquare\)</span> entries be? For each of these, list out which variables are pivot variables and which are free variables.</p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-82" class="internal">in-context</a></span>
 </body>
 </html>
