--- a/knowl/p-83.html
+++ b/knowl/p-83.html
@@ -11,15 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h6 class="heading"><span class="type">Paragraph</span></h6>
-<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{align*}
-7x-11y-2z\amp =3\\
-8x-2y+3z\amp =1\\
-3r-5s+t\amp =2\\
--6r+10s-2t\amp =3
-\end{align*}
-</div>
+<h5 class="heading"><span class="type">Paragraph</span></h5>
+<p>Solve each of the following systems by converting to an augmented matrix and using elementary row operations to reduce the augmented matrix to reduced row echelon form. With each reduced row echelon form, put a box around all pivot entries. Use the system of equations corresponding to the reduced row echelon form to write out the solution set for each system.</p>
 <span class="incontext"><a href="sec_solving_linear_systems.html#p-83" class="internal">in-context</a></span>
 </body>
 </html>
