--- a/knowl/p-85.html
+++ b/knowl/p-85.html
@@ -14,11 +14,11 @@
 <h6 class="heading"><span class="type">Paragraph</span></h6>
 <div class="displaymath process-math" data-contains-math-knowls="">
 \begin{align*}
-2y+z\amp =4\\
-x-3y+2z\amp =5\\
-2x+y \amp =-2
+3x_1-2x_2\amp =6\\
+2x_1-2x_2\amp=6\\
+-x_1+x_2\amp =1
 \end{align*}
 </div>
-<span class="incontext"><a href="sec_solving_linear_systems.html#p-55" class="internal">in-context</a></span>
+<span class="incontext"><a href="sec_solving_linear_systems.html#p-85" class="internal">in-context</a></span>
 </body>
 </html>
