--- a/knowl/p-86.html
+++ b/knowl/p-86.html
@@ -14,11 +14,10 @@
 <h6 class="heading"><span class="type">Paragraph</span></h6>
 <div class="displaymath process-math" data-contains-math-knowls="">
 \begin{align*}
-2y+z\amp =4\\
-x-3y+2z\amp =5\\
-2x+y \amp =-2
+4x-y+3z\amp =5\\
+3x-y+2z\amp =7
 \end{align*}
 </div>
-<span class="incontext"><a href="sec_solving_linear_systems.html#p-55" class="internal">in-context</a></span>
+<span class="incontext"><a href="sec_solving_linear_systems.html#p-86" class="internal">in-context</a></span>
 </body>
 </html>
