--- a/knowl/p-87.html
+++ b/knowl/p-87.html
@@ -14,11 +14,12 @@
 <h6 class="heading"><span class="type">Paragraph</span></h6>
 <div class="displaymath process-math" data-contains-math-knowls="">
 \begin{align*}
-2y+z\amp =4\\
-x-3y+2z\amp =5\\
-2x+y \amp =-2
+7x-11y-2z\amp =3\\
+8x-2y+3z\amp =1\\
+3r-5s+t\amp =2\\
+-6r+10s-2t\amp =3
 \end{align*}
 </div>
-<span class="incontext"><a href="sec_solving_linear_systems.html#p-55" class="internal">in-context</a></span>
+<span class="incontext"><a href="sec_solving_linear_systems.html#p-87" class="internal">in-context</a></span>
 </body>
 </html>
