--- a/knowl/p-88.html
+++ b/knowl/p-88.html
@@ -11,14 +11,8 @@
 <meta name="robots" content="noindex, nofollow">
 </head>
 <body class="ignore-math">
-<h6 class="heading"><span class="type">Paragraph</span></h6>
-<div class="displaymath process-math" data-contains-math-knowls="">
-\begin{align*}
-2y+z\amp =4\\
-x-3y+2z\amp =5\\
-2x+y \amp =-2
-\end{align*}
-</div>
-<span class="incontext"><a href="sec_solving_linear_systems.html#p-55" class="internal">in-context</a></span>
+<h2 class="heading"><span class="type">Paragraph</span></h2>
+<p>This book was authored in PreTeXt.</p>
+<span class="incontext"><a href="colophon-2.html#p-88" class="internal">in-context</a></span>
 </body>
 </html>
