--- a/solutions-1.html
+++ b/solutions-1.html
@@ -8,7 +8,7 @@
 <html lang="en-US">
 <head xmlns:og="http://ogp.me/ns#" xmlns:book="https://ogp.me/ns/book#">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Front Matter</title>
+<title>Selected Solutions</title>
 <meta name="Keywords" content="Authored in PreTeXt">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:type" content="book">
@@ -78,15 +78,15 @@ window.MathJax = {
 </div></div>
 <nav id="primary-navbar" class="navbar"><div class="container">
 <div class="navbar-top-buttons">
-<button class="sidebar-left-toggle-button button active" aria-label="Show or hide table of contents sidebar">Contents</button><div class="tree-nav toolbar toolbar-divisor-3"><span class="threebuttons"><a id="previousbutton" class="previous-button toolbar-item button" href="my-great-book.html" title="Previous">Prev</a><a id="upbutton" class="up-button button toolbar-item" href="my-great-book.html" title="Up">Up</a><a id="nextbutton" class="next-button button toolbar-item" href="colophon-1.html" title="Next">Next</a></span></div>
+<button class="sidebar-left-toggle-button button active" aria-label="Show or hide table of contents sidebar">Contents</button><div class="tree-nav toolbar toolbar-divisor-3"><span class="threebuttons"><a id="previousbutton" class="previous-button toolbar-item button" href="meta_backmatter.html" title="Previous">Prev</a><a id="upbutton" class="up-button button toolbar-item" href="meta_backmatter.html" title="Up">Up</a><a id="nextbutton" class="next-button button toolbar-item" href="colophon-2.html" title="Next">Next</a></span></div>
 </div>
 <div class="navbar-bottom-buttons toolbar toolbar-divisor-4">
-<button class="sidebar-left-toggle-button button toolbar-item active">Contents</button><a class="previous-button toolbar-item button" href="my-great-book.html" title="Previous">Prev</a><a class="up-button button toolbar-item" href="my-great-book.html" title="Up">Up</a><a class="next-button button toolbar-item" href="colophon-1.html" title="Next">Next</a>
+<button class="sidebar-left-toggle-button button toolbar-item active">Contents</button><a class="previous-button toolbar-item button" href="meta_backmatter.html" title="Previous">Prev</a><a class="up-button button toolbar-item" href="meta_backmatter.html" title="Up">Up</a><a class="next-button button toolbar-item" href="colophon-2.html" title="Next">Next</a>
 </div>
 </div></nav></header><div class="page">
 <div id="sidebar-left" class="sidebar" role="navigation"><div class="sidebar-content">
 <nav id="toc"><ul>
-<li class="link frontmatter active">
+<li class="link frontmatter">
 <a href="meta_frontmatter.html" data-scroll="meta_frontmatter" class="internal"><span class="title">Front Matter</span></a><ul>
 <li><a href="colophon-1.html" data-scroll="colophon-1" class="internal">Colophon</a></li>
 <li><a href="meta_frontmatter-preface.html" data-scroll="meta_frontmatter-preface" class="internal">Preface</a></li>
@@ -108,24 +108,14 @@ window.MathJax = {
 <li class="link">
 <a href="ch_solving_sys.html" data-scroll="ch_solving_sys" class="internal"><span class="codenumber">2</span> <span class="title">Getting Started</span></a><ul><li><a href="sec_solving_linear_systems.html" data-scroll="sec_solving_linear_systems" class="internal">Solving Linear Systems</a></li></ul>
 </li>
+<li class="link backmatter"><a href="meta_backmatter.html" data-scroll="meta_backmatter" class="internal"><span class="title">Backmatter</span></a></li>
+<li class="link active"><a href="solutions-1.html" data-scroll="solutions-1" class="internal"><span class="codenumber">A</span> <span class="title">Selected Solutions</span></a></li>
+<li class="link"><a href="colophon-2.html" data-scroll="colophon-2" class="internal"><span class="title">Colophon</span></a></li>
 </ul></nav><div class="extras"><nav><a class="pretext-link" href="https://pretextbook.org">Authored in PreTeXt</a><a href="https://www.mathjax.org"><img title="Powered by MathJax" src="https://www.mathjax.org/badge/badge.gif" alt="Powered by MathJax"></a></nav></div>
 </div></div>
-<main class="main"><div id="content" class="pretext-content"><section class="frontmatter" id="meta_frontmatter"><h2 class="heading">
-<span class="title">Linear Algebra:</span> <span class="subtitle">Notes for MATH 341</span>
-</h2>
-<div class="author">
-<div class="author-name">Mitchel T. Keller</div>
-<div class="author-info">Department of Mathematics<br>University of Wisconsin-Madison</div>
-</div>
-<div class="author">
-<div class="author-name">Nicholas Long</div>
-<div class="author-info">Department of Mathematics and Statistics<br>Stephen F. Austin State University</div>
-</div>
-<div class="date">September 14, 2022</div>
-<nav class="summary-links"><ul>
-<li><a href="colophon-1.html" class="internal"><span class="title">Colophon</span></a></li>
-<li><a href="meta_frontmatter-preface.html" class="internal"><span class="title">Preface</span></a></li>
-</ul></nav></section></div></main>
+<main class="main"><div id="content" class="pretext-content"><section class="solutions" id="solutions-1"><h2 class="heading">
+<span class="type">Appendix</span> <span class="codenumber">A</span> <span class="title">Selected Solutions</span>
+</h2></section></div></main>
 </div>
 </body>
 </html>
